@@ -17,10 +17,10 @@
   </Interfaces>
   <Members>
     <Member MemberName="GetDefault">
-      <MemberSignature Language="C#" Value="public static Pango.Renderer GetDefault (Gdk.Screen screen);" />
+      <MemberSignature Language="C#" Value="public static Gdk.PangoRenderer GetDefault (Gdk.Screen screen);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
-        <ReturnType>Pango.Renderer</ReturnType>
+        <ReturnType>Gdk.PangoRenderer</ReturnType>
       </ReturnValue>
       <Parameters>
         <Parameter Name="screen" Type="Gdk.Screen" />
@@ -28,7 +28,7 @@
       <Docs>
         <summary>To be added</summary>
         <param name="screen">a <see cref="T:Gdk.Screen" /></param>
-        <returns>a <see cref="T:Pango.Renderer" /></returns>
+        <returns>a <see cref="T:Gdk.PangoRenderer" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
