@@ -1,3 +1,11 @@
+2005-06-06  Dan Winship  <danw@novell.com>
+
+	* sample/GtkDemo/DemoRotatedText.cs (RotatedTextExposeEvent): Use
+	Gdk.PangoRenderer.GetDefault() like the C gtk-demo rather than
+	creating a new Gdk.PangoRenderer. [Fixes #74865]
+
+	* gdk/Gdk.metadata: fix return type of Gdk.PangoRenderer.GetDefault
+
 2005-06-02  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/gtk-api-2.6.raw : regen.
